# Nadamark

./: .gitignore  Dockerfile  README.md  docker-compose.yml  nadamark.nix
.github/workflows/: docker-publish.yml
backend/: Cargo.toml  diesel.toml
backend/migrations/2024-12-28-102955_bookmarks/: down.sql  up.sql
backend/migrations/2024-12-28-103008_folders/: down.sql  up.sql
backend/src/: create.rs  database.rs  drag_drop.rs  export.rs  import.rs  main.rs  models.rs  modify.rs  schema.rs  tree.rs
frontend/: package-lock.json  package.json  svelte.config.js
frontend/src/: app.html  stores.js
frontend/src/lib/: types.ts
frontend/src/lib/components/: ContextMenu.svelte  EditModal.svelte  Favicon.svelte  FavoritesBar.svelte  FolderTreeItem.svelte  NewItemModal.svelte  SearchOverlay.svelte  TreeItem.svelte
frontend/src/lib/stores/: contextMenuStore.ts  rootItemsStore.ts
frontend/src/lib/utils/: allBookmarks.ts  allFolders.ts
frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts
