[package]
name = "nadamark-backend"
version = "25.1.0"
edition = "2021"
license = " AGPL-3.0-or-later"

[profile.release]
lto = true

[dependencies]
axum = "0.7"
diesel = { version = "2.2", features = ["sqlite", "time"] }
diesel_migrations = "2.2"
directories = "5.0"
rfd = "0.15"
scraper = "0.22.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["serde", "local-offset"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
